# rust-contact-mailer

./: Cargo.toml  MK.postman_collection.json  README.md  deploy-uberspace.sh  dist.env
.circleci/: config.yml
ansible/: hosts  playbook.yml  requirements.yml  vault-env
src/: mail.rs  main.rs
