[package]
name = "rust-contact-mailer"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
serde_json = "1.0.40"
serde = {version = "1.0.99" , features = ["derive"] }
hyper = "0.12.33"
futures = "0.1.28"
dotenv = "0.14.1"
